# justhtml

./: pyproject.toml
.github/workflows/: ci.yml
src/justhtml/: __main__.py  constants.py  context.py  encoding.py  entities.py  errors.py  node.py  parser.py  selector.py  serialize.py  stream.py  tokenizer.py  tokens.py  treebuilder.py  treebuilder_modes.py  treebuilder_utils.py
